--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,7 @@
         "php": "^5.6 || ^7.0 || ^8.0",
         "ext-pdo": "*",
         "ext-curl": "*",
-        "ext-json": "*"
-    },
-    "require-dev": {
+        "ext-json": "*",
         "nguyenanhung/my-debug": "^3.0 || ^2.0 || ^1.0",
         "nguyenanhung/my-cache": "^3.0 || ^2.0 || ^1.0",
         "nguyenanhung/database": "^3.0 || ^2.0 || ^1.0",
@@ -42,6 +40,9 @@
         "nguyenanhung/web-builder-templates": "^2.0 || ^1.0",
         "nguyenanhung/web-builder-assets": "^1.0",
         "nguyenanhung/validation": "^1.0"
+    },
+    "require-dev": {
+        "tramtro/make-some-noise": ">=1.0"
     },
     "autoload": {
         "psr-4": {
