Update Framework build

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "library",
         "php"
     ],
-    "homepage": "https://github.com/smart-bear-cms/web-builder-frameworkk",
+    "homepage": "https://github.com/smart-bear-cms/web-builder-framework",
     "license": "MIT",
     "minimum-stability": "stable",
     "authors": [
@@ -26,19 +26,10 @@
         "ext-pdo": "*",
         "ext-curl": "*",
         "ext-json": "*",
-        "nguyenanhung/my-debug": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/my-cache": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/database": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/security": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/requests": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/monitor": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/image": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/helpers": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/seo": "^3.0 || ^2.0 || ^1.0",
+        "nguyenanhung/framework": "^1.0",
         "nguyenanhung/web-builder-helper": "^2.0 || ^1.0",
         "nguyenanhung/web-builder-templates": "^2.0 || ^1.0",
-        "nguyenanhung/web-builder-assets": "^1.0",
-        "nguyenanhung/validation": "^1.0"
+        "nguyenanhung/web-builder-assets": "^1.0"
     },
     "require-dev": {
         "nguyenanhung/vn-telco-phonenumber": "^3.0 || ^2.0 || ^1.0",
