--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0 || ^8.0",
+        "php": "^8.0 || ^7.0 || ^5.6",
         "ext-pdo": "*",
         "ext-curl": "*",
         "ext-json": "*",
@@ -33,8 +33,8 @@
     },
     "require-dev": {
         "nguyenanhung/vn-telco-phonenumber": "^3.0 || ^2.0 || ^1.0",
-        "nguyenanhung/basic-firewall": ">=1.0",
-        "tramtro/make-some-noise": ">=1.0"
+        "nguyenanhung/basic-firewall": "^2.0 || ^1.0",
+        "tramtro/make-some-noise": "^1.0"
     },
     "autoload": {
         "psr-4": {
